# goCash

./: .env_example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  sql_from_row_imps.rs  websocket_pub.rs
src/components/: CustomAlert.jsx  Dashboard.jsx  Deposit.jsx  History.jsx  Login.jsx  Modal.jsx  Skeleton.jsx  Transfer.jsx  Withdraw.jsx
src/hooks/: use-trasactions.js  use-websocket-sub.js
