[package]
name = "gocash"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gocash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = "20.0"
dotenv = "0.15"
once_cell = "1.21.1"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.16", features = ["v4"] }
chrono = "0.4.40"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

